# struct-serializer-rs

./: .gitignore  Cargo.toml
strser/: Cargo.toml
strser/src/: lib.rs
strsermac/: Cargo.toml
strsermac/src/: lib.rs
